2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Properly handle the
	  project renamed event.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.mdp, Makefile.am,
	  MonoDevelop.Projects.Extensions/FileFilterCodon.cs: Moved
	  FileFilterCodon from MD.Projects to MD.Ide (where the extension point is
	  actually defined).

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/ClassWrapper.cs: Added protection against
	  exceptions thrown when reading class info from the database.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Parser/CompoundClass.cs: Don't add System.Object as
	  base class if one of the parts has a different base class.
	* MonoDevelop.Projects.Parser/IReturnType.cs,
	  MonoDevelop.Projects.Parser/DefaultReturnType.cs: Added property for
	  knowing if a type is the root type (System.Object).

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Copy the config file to the correct location.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.addin.xml: Removed obsolete extension points.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/LanguageBindingService.cs,
	  MonoDevelop.Projects.Ambience/AmbienceService.cs,
	  MonoDevelop.Projects.addin.xml, MonoDevelop.Projects.mdp, Makefile.am:
	  Reorganized the extension point hierarchy. Embedded all add-in manifests
	  as resources.

2007-08-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/ProjectService.cs,
	  MonoDevelop.Projects/ProjectsServices.cs,
	  MonoDevelop.Projects/LanguageBindingService.cs,
	  MonoDevelop.Projects/LanguageService.cs, MonoDevelop.Projects.addin.xml,
	  MonoDevelop.Projects.mdp, Makefile.am,
	  MonoDevelop.Projects.Parser/DefaultParserService.cs: API cleanup.
	  Converted core services into regular classes.
