@@ -236,6 +236,7 @@
     <File name="./MonoDevelop.Projects.Parser.Cecil/MonoSymbolWriter.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Projects.Parser.Cecil/SymbolWriterImpl.cs" subtype="Code" buildaction="Compile" />
     <File name="./MonoDevelop.Projects.addin.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./MonoDevelop.Projects.Text/TextFileService.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="False" refto="monodoc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
