@@ -1,3 +1,8 @@
+2007-08-20  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects.Text/TextFileService.cs: Fixed bug 82282:Error list
+	  pad should take into account line changes done in files.
+
 2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects.Parser/DefaultParserService.cs: Properly handle the
